CHANGE LOG
========================

v 1.2.6
-------

035 Improvement (minor)
    Some refactoring (moving methods in utils modules)



v 1.2.5
------
034 Improvement (major):
    Test functionality, activated with -t CLI argument, performs numerical checks of diff maps
        and logs red messages if values are too big.
        New XML configuration parameter: 'atol' (absolute tolerance).

033 Bug fix (minor):
    Some lat/lon PCRaster maps shared the same metadata so the interpolation id resulted to be the same,
        even if they are different (because of different projection).
        Added min and max values of lats and longs to the metadata. This ensures uniqueness in the interpolation filename
        for each GRIB grid/PCRaster grid couple, also in slighty different projected areas.

032 Bug fix (major):
    new added CLI arguments fmap and ext prevented corresponding XML configuration to be read
    so they were set to default '1'.

031 Bug Fix (minor):
    Removed logs of coordinates when points are out of grid
        during creation of interpolation table.


v 1.2.4
------
030 Bug Fix (minor):
    2nd Resolution Intertable wasn't logged.

029 Improvement (minor):
    Filenames starting with dash '-' are problematic in linux.
    Now intertables filename has the prefix 'I'.


v 1.2.3
------
028 Bug fix (major):
    Grid IS, as used in intertables filenames and in geopotentials IDs (in geopotentials.xml),
        were erroneously constructed cutting away decimals.
        This could have lead to ambiguities when selecting intertables or geopotentials,
        in case some GRIB files have a grid with a difference in decimals in its bounding box longitudes.

027 Bug fix (minor):
    test_reqs.py was never able to check the existence of configuration directory due a bug in paths.

v. 1.2.2
------
026 Bug fix (major):
    Single multiresolution gribs extraction was failing for a bug in reading second resolution values.