@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+    <Execution name = "cosmo_e06" id="1" >
+        <Parameter shortName="alhfl_s" applyConversion="tommd" tend="12"/>
+         <Aggregation type="average" step="6" />
+
+        <OutMaps namePrefix="pE06" fmap="001" ext="6" unitTime="24"
+                 cloneMap="/dataset/maps/cosmo/dem05.map" >
+            <Interpolation mode="nearest"
+                           latMap="/dataset/maps/cosmo/cosmo05_lat.map"
+                           lonMap="/dataset/maps/cosmo/cosmo05_lon.map" />
+        </OutMaps>
+    </Execution>
