@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<Execution name = "dwd_rain_gsp" id="4" >
+    <Parameter shortName="rain_gsp" applyConversion="cut" tstart="12" tend="18"/>
+    <Aggregation type="accumulation" step="6" />
+
+    <OutMaps namePrefix="pR06a" fmap="1"
+             cloneMap="/dataset/maps/dwd/dem05.map" unitTime="24">
+
+        <Interpolation mode="grib_nearest"
+                       latMap="/dataset/maps/dwd/dwdlme05_lat.map"
+                       lonMap="/dataset/maps/dwd/dwdlme05_lon.map" />
+    </OutMaps>
+</Execution>
