@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+    <!--
+    grib2pcraster
+    -i /gpfs/r_lxab/efas/emos/efas/meteo/forecasted/ecmwf/2013/06/EpsN320-2013061800.grb
+    -o /gpfs/r_lxab/efas/emos/efas/europe5km/201306/EUE2013061800/p10/
+    -p 228.128 -n R24a -t 24 -fmap=1 -m 10
+        -->
+
+    <Execution name = "eue_tp" id="9" >
+        <Parameter shortName="tp" applyConversion="tomm" tend="48"/>
+        <Aggregation type="accumulation" step="24" />
+
+        <OutMaps namePrefix="pR24" fmap="1"
+                 cloneMap="/dataset/maps/europe5km/lat.map" unitTime="24">
+            <Interpolation mode="nearest"
+                           latMap="/dataset/maps/europe5km/lat.map"
+                           lonMap="/dataset/maps/europe5km/long.map" />
+        </OutMaps>
+    </Execution>
